# An-Agent-Based-Approach-to-Iterative-Search-Ranking-via-Query-Space-Exploration

./: .gitignore  README.md  pyproject.toml
data/: README.md
outputs/msmarco_trec_dl_2019_experiment_suite/: experiment_1_baseline_vs_reranking.csv  experiment_2_method_comparison.csv  experiment_3_iteration_analysis.csv  experiment_4_query_refinement_impact.csv  shared_llm_score_cache.json  suite_summary.json
outputs/msmarco_trec_dl_2019_experiment_suite/experiment_1_baseline_bm25/: metrics.json  rankings.csv  run_log.txt
outputs/msmarco_trec_dl_2019_experiment_suite/experiment_1_llm_rerank/: metrics.json  reranked_rankings.csv  run_log.txt
outputs/msmarco_trec_dl_2019_experiment_suite/experiment_2_agent/: agent_candidate_scores.csv  agent_final_rankings.csv  agent_iteration_log.csv  metrics.json  run_log.txt
search_ranker/: __init__.py  agent.py  agent_experiment.py  baseline.py  bm25.py  compare.py  data.py  experiment.py  metrics.py  msmarco.py  ollama_reranker.py  rerank.py  rerank_experiment.py  suite.py  text.py
tests/: test_agent_experiment.py  test_bm25.py  test_compare.py  test_data.py  test_experiment.py  test_metrics.py  test_ollama_reranker.py  test_rerank_experiment.py  test_suite.py  test_text.py
